Sculpt - Grab - Topology automasking wierd behaviour #77417

Closed
opened 2020-06-05 08:22:46 +02:00 by Mike · 9 comments

System Information
Operating system: Windows 10 x64
Graphics card: nvidia 1070 gtx

Blender Version
2.83 but looks the same in 82 and 81...

Short description of error
In a sculpt mode grab brush with topology automasking works weird - it activates grab only when more than 1 vertex (connected) in a brush distance, what very annoying...

blender_tam.mov

maybe it interferes with https://developer.blender.org/rB49e9d7d8f3dff07fb8c45152f541b2952fd44d18 this, but toggling all the time topology automasking when need to move only 1 vertex and then back - is too unhandy...

Short description of error

  • Open attached file
  • Go to sculpt mode
  • Try to drag a vertex (it doesn't work because of the Topology option and the area of influence)
    grab-topo.blend
**System Information** Operating system: Windows 10 x64 Graphics card: nvidia 1070 gtx **Blender Version** 2.83 but looks the same in 82 and 81... **Short description of error** In a sculpt mode grab brush with topology automasking works weird - it activates grab only when more than 1 vertex (connected) in a brush distance, what very annoying... [blender_tam.mov](https://archive.blender.org/developer/F8578306/blender_tam.mov) maybe it interferes with https://developer.blender.org/rB49e9d7d8f3dff07fb8c45152f541b2952fd44d18 this, but toggling all the time topology automasking when need to move only 1 vertex and then back - is too unhandy... **Short description of error** - Open attached file - Go to sculpt mode - Try to drag a vertex (it doesn't work because of the Topology option and the area of influence) [grab-topo.blend](https://archive.blender.org/developer/F8602354/grab-topo.blend)
Author

Added subscriber: @MikeMS

Added subscriber: @MikeMS

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Could you provide a .blend file and simple steps to reproduce the problem?

Could you provide a .blend file and simple steps to reproduce the problem?
Author

In #77417#948485, @mano-wii wrote:
Could you provide a .blend file and simple steps to reproduce the problem?

Yep, here it is grab-topo.blend
Go to sculpt mode, select Grab brush, check that the Topology Auto-Masking is enabled, reduce brush size and try to move vertices on mustache...

> In #77417#948485, @mano-wii wrote: > Could you provide a .blend file and simple steps to reproduce the problem? Yep, here it is [grab-topo.blend](https://archive.blender.org/developer/F8602354/grab-topo.blend) Go to sculpt mode, select Grab brush, check that the Topology Auto-Masking is enabled, reduce brush size and try to move vertices on mustache...
Author

This is strange, but if I create in that scene (that I attached above) Suzanne - it wouldn't work also on it, but if i create Suzanne in a new scene - it works as it should...
But noticed before, that this happens sometime in a different scenes, not only on that one.

This is strange, but if I create in that scene (that I attached above) Suzanne - it wouldn't work also on it, but if i create Suzanne in a new scene - it works as it should... But noticed before, that this happens sometime in a different scenes, not only on that one.

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I'm not sure if it really is a bug, but it is an inconvenience. So confirming as a bug for now.

I'm not sure if it really is a bug, but it is an inconvenience. So confirming as a bug for now.

This issue was referenced by 10cacbbb15

This issue was referenced by 10cacbbb159d95de00ac31befa466238c389f0b2
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Pablo Dobarro self-assigned this 2020-07-15 16:16:15 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#77417
No description provided.